force-app/main/default/objects/Account/fields/Customer_Classification__c.field-meta.xml
<CustomField>
    <fullName>Customer_Classification__c</fullName>
    <description>Calculate the customer classification based on the total customer spend amount.</description>
    <formula>IF(Total_Customer_Spend__c &gt;=50000, &apos;GOLD&apos;, 
 IF(Total_Customer_Spend__c &gt;=25000, &apos;SILVER&apos;, 
 IF(Total_Customer_Spend__c &gt;=10000, &apos;BRONZE&apos;,&apos; &apos;) ) )</formula>
    <inlineHelpText>Calculate based on the total customer spend amount field.</inlineHelpText>
    <label>Customer Classification</label>
    <type>Text</type>
</CustomField>