force-app/main/default/objects/Account/fields/Gold_Notification_Send__c.field-meta.xml
<CustomField>
    <fullName>Gold_Notification_Send__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This flag is used to make sure SMS notifications will be sent only once.</description>
    <label>Gold Notification Send</label>
    <type>Checkbox</type>
</CustomField>